<resources>
    <string name="app_name">Declutter Bug</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_information">Information</string>
    <string name="text_tips">Tips</string>
    <string name="text_task">Tasks</string>
    <string name="title_work">How Does this Work?</string>
    <string name="text_work">In the next 30 days, you will fully declutter and organize your house. This challenge is about creating a space that feels freeing and putting less focus on the things in your life and a bigger focus on how you live your life. </string>
    <string name="title_notime">No Time?</string>
    <string name="text_notime">The daily challenge will take a different amount of time for different people. If you don’t feel like you have that time, you can self pace and customize it to what works for you.</string>
    <string name="title_whydeclutter">Why Declutter?</string>
    <string name="bulleted_list">
        <li>More time for yourself: \nImagine a life with less to clean and organize. Less to store. Less to buy. Less to sell or get rid of. If you have less stuff and less to do, you will automatically gain more time. </li>\n
        \n<li>More physical space: \nMany times we feel like we do not have enough room and sometimes we even want to move to a bigger house. But here is a simpler solution. Have less stuff. Reduce your belongings and enjoy the pleasant and stress-free view.</li>\n
        \n<li>More mental space: \nClutter in our houses clutters our minds. Minimalism helps clear and calm our minds so that we have more time and mental energy to think and plan about future progresses. Your productivity will raise with higher energy and more focus.</li>\n
        \n<li>More long lost memories: \nMany times you will be surprised about what you find under neat that clutter. The usual things you hear during decluttering is "Oh. I did not know this was here! Wow. I thought I had lost it...."</li>\n
        \n<li>More appreciation for belongings: \nOwning less stuff makes us appreciate, value, and love what we have. When you have one, of something, you take care of it a lot more than when you have many of the same item. </li>
    </string>
    <string name="title_owner">Have Owner\’s Permission.</string>
    <string name="text_owner">Make sure you don\’t violate anyone else\’s territory by discarding items that belong to someone else. Send them the information in this application instead and help them declutter. </string>
    <string name="title_go">Let Things Go.</string>
    <string name="text_go">Be realistic about what you really need and don\’t make excuses to keep things that you “might need someday.” Many items in our homes may be useful, but they may not make us happy or add to our functionality. Also, don\’t let others or your nostalgia stop you from keeping or giving away something.</string>
    <string name="title_easy">Start Easy.</string>
    <string name="text_easy">It may be hard at first to declutter, but start with the easy things. If not, you may give up on decluttering overall. As you strengthen the ability to reduce, you will be able to make better decisions on the harder things. </string>
    <string name="title_buying">Stop Buying.</string>
    <string name="text_buying">Keep in mind that buying countless things got you into this mess in the first place. We accumulate so many items we don\’t need, so think twice before you make more purchases.</string>
    <string name="title_donate">Actually Donate.</string>
    <string name="text_donate">After decluttering a bunch of items, you may have a “Donate” pile. Take some time to put this pile into your car and drop it off. If not, this pile will just add more clutter to your house.</string>
    <string name="day1_header">DAY 1: SET YOUR INTENTIONS</string>
    <string name="day1_title1">Why this challenge?</string>
    <string name="day1_text1">
        <li>Why did you made the decision to download this application in the first place? Are you stressed with your current work environment? Want to become a less messy person? Cannot find important items in your house? </li>\n
        <li>Write these down so that you can look back at them at the end of this challenge.</li>\n</string>
    <string name="day1_title2">What’s your end goal?</string>
    <string name="day1_text2">
        <li>How you want to feel at the end of this challenge? Do you want to walk into a clear, open space everyday? Do you only want to be surrounded by the things you love?</li>\n
        <li>Write these thoughts down.</li>\n</string>
    <string name="day1_title3">What are your weaknesses?</string>
    <string name="day7_header">DAY 7: PAPER</string>
    <string name="day7_title1">Gather Your Paper Items</string>
    <string name="day7_text1">Go get all of the papers in your house and put them on your floor. \n
        \nSome common categories are:\n
        <li>Mail (Letters, Junk Mail, Tax Records, Bills, Bank Statements)</li>\n
        <li>Wallet and Purse Items (Business Cards, Receipts, Takeout Items)</li>\n
        <li>Informative Booklets (Pamphlets, Warranties, Manuals for your microwave, fridge, camera, etc.)</li>\n
        <li>Certification (Birth, Education, Marriage)</li>\n
        <li>Vehicle titles</li>\n
        <li>Loan documents</li>\n
        <li>Recipes</li>\n
        <li>Old Assignments, Handwritten Notes</li>\n
        <li>Printed Photos</li>\n</string>
    <string name="day7_title2">Declutter Your Paper Items</string>
    <string name="day7_text2">As a blanket rule, the only physical papers that you actually need to hang on to are important such as government-related, important loans, and unpaid bills.\n
        \nWhat should you keep?\n
        <li>Letters for Actioning</li>\n
        <li>Relevant warranties that are still in date</li>\n
        <li>Any current insurance policies</li>\n
        <li>Vehicle Titles, Registration Documents</li>\n
        <li>Loan Documents</li>\n
        <li>Bank and Superannuation Statements</li>\n
        <li>Birth, Marriage, and Divorce Certificates</li>\n
        <li>Wills and Power of Attorney</li>\n
        <li>Tax Records</li>\n
        <li>Certificates and Qualifications</li>\n
        <li>Medical Documents</li>\n
        \nTake photos of the rest and store them online.</string>
    <string name="day7_title3">Store, Recycle, Plan</string>
    <string name="day7_text3">
        <li>Recycle any paper that you are not keeping. Be sure to shred or destroy anything that has personal information.</li>
        <li>Rather than letting the paper pile up again, reduce the amount of incoming paper in your life. You can unsubscribe from any paper based subscription that you have, opt to get your banking or superannuation statements online, and vow to never ask for a receipt if you do not need it or take a picture of the receipt. You can place a no junk mail sticker on your mailbox as well.</li>
        <li>Put all of the papers that you have kept in a folder or a plastic sleeve, grouping similar papers. Make sure to designate your folder to its own space.</li>\n
    </string>
    <string name="day10_header">DAY 10: COMPUTER</string>
    <string name="day10_title1">Delete to Declutter</string>
    <string name="day10_text1">
        Some easy steps to clear your computer are:\n
        <li>Delete everything in your Downloads.</li>\n
        <li>Delete everything off of your Desktop.</li>\n
        <li>Empty your Trash.</li>\n
        <li>Uninstall programs and application that you do not use.</li>\n
        <li>If you are on a Mac, remove any programs from your dock that you do not use regularly</li>\n</string>
    <string name="day10_title2">Create a Folder Structure</string>
    <string name="day10_text2">Your computer should be self explanatory and easy to navigate. To give you some inspiration, here are some examples:\n
        <li>Media > Books, Movies, TV Shows, Music, Photos</li>\n
        <li>Personal Documents > Identification, Bills, Health, etc.</li>\n
        <li>Projects > Subfolders for Personal Projects</li>\n
        <li>Professional > Job Applications, Work Projects, etc.</li>\n
    </string>
    <string name="day10_title3">Drag Your Files and Repeat</string>
    <string name="day10_text3">
        <li>Do I need to keep this for record reasons?</li>\n
        <li>Will I ever refer to this again?</li>\n
        <li>For media, does this spark joy?</li>\n
        \nRepeat steps 1 and 2 for your external hard drive, Dropbox, Google Drive, browser bookmarks, browser extensions and any other storage services you use.\n
    </string>
    <string name="day17_header">DAY 17: MAKEUP AND SKINCARE</string>
    <string name="day17_title1">Gather Your Makeup and Skincare Items</string>
    <string name="day17_text1">Lay out all your items on the floor.\n
        \nSome common categories are:\n
        <li>Makeup Brushes</li>\n
        <li>Face Products (Primer, Foundation, Concealer, Powder, Blush, Highlight, Bronzer, Contour, Setting Spray, etc.)</li>\n
        <li>Eye Products (Mascara, Eyeliner, Eyeshadow, Fake Lashes, Lash Glue, Eye Primer, etc.)</li>\n
        <li>Lip Products (Lip Gloss, Lip Liner, Lipstick, Lip Velour, Lip Plump, etc.)</li>\n
        <li>Skin Products (Cleansers, Exfoliators, Serums, Moisturizers, Sun Care)</li>\n</string>
    <string name="day17_title2">Declutter Your Makeup and Skincare Items</string>
    <string name="day17_text2">Go through each product or tool and ask yourself:\n
       <li>Is this out of date? Look online for the shelf life of certain makeup items, so you are not using expired products.</li>\n
        <li>Does this spark joy?</li>\n
        <li>Do I use this?</li>\n
        <li>Does using this make me feel confident and happy?</li>\n</string>
    <string name="day17_title3">Discard, Sell, and Return</string>
    <string name="day17_text3">
        <li>Most thrift shops will not take used-makeup for hygienic reasons, so you will need to bag up any unwanted makeup and dispose it.</li>\n
        <li>There are some websites that will pay for barely-used makeup if it is fully sanitized and then replace it. Check out places like Glambot If you want to go down that route.</li>\n
        <li>Once you have discarded your makeup, return all of your leftover makeup and skincare back to where it belongs, grouping like items together for easy access.</li>\n
    </string>
    <string name="day20_header">DAY 20: CAR</string>
    <string name="day20_title1">Gather Your Car Items</string>
    <string name="day20_text1">Take out all of your car items and put them on the floor where you can see them altogether.\n
        \nSome common categories are:\n
        <li>Tire Changing Supplies</li>\n
        <li>Tire Sealant</li>\n
        <li>Owner Manual</li>\n
        <li>Jumper Cables</li>\n
        <li>Tire Pressure Gauge</li>\n
        <li>Flashlight</li>\n
        <li>Duct Tape</li>\n
        <li>First Aid Kit</li>\n
        <li>Winter Equipment (Snow Shovel, Ice Scraper, Snow Chains)</li>\n
        <li>Bottled Water</li>\n
        <li>Maps</li>\n
        <li>Weather Radio</li>\n
        <li>Reflective Triangles</li>\n</string>
    <string name="day20_title2">Declutter Your Car Items</string>
    <string name="day20_text2">Go through each car item and ask yourself:\n
       <li>Does this belong in my car or should it belong somewhere in my house?</li>\n
        <li>Do I actually use this or will I need to use it for the current season?</li>\n
        <li>Is it damaged?</li>\n
        <li>Is my emergency food and water old?</li>\n</string>
    <string name="day20_title3">Discard and Return</string>
    <string name="day20_text3">
        <li>Discard all of the items that do are not essential to your car or belong somewhere else in your house.</li>\n
        <li>Return the rest of the items to your car. Keep similar items together so you can easily access them.</li>\n
    </string>
</resources>